Mon Feb 27 16:20:41 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/setaf/Setaf_Parser.cpp:

          Added more comments to the parser.

Sun Feb 26 21:51:01 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/setaf/setaf.mpc:

          Fixed a linker error in Linux due to the previous commit.

Sun Feb 26 21:23:06 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/setaf/Setaf_Format.inl:

          Fixed some linux compiler warnings of SETAF.

Sun Feb 26 20:36:28 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/unite/Dataflow_Graph.h:
        * cuts/unite/Dataflow_Graph.cpp:
        * cuts/unite/Dataflow_Graph_Builder.cpp:
        * cuts/unite/Log_Format.cpp:
        * cuts/unite/Log_Format_Adapter.h:
        * cuts/unite/Log_Format_Adapter.cpp:
        * cuts/unite/Variable.h:
        * cuts/unite/Variable_T.cpp:
        * cuts/unite/cuts-unite.h:
        * cuts/unite/cuts-unite.inl:
        * cuts/unite/cuts-unite.cpp:
        * cuts/unite/setaf/Cpp.cpp:
        * cuts/unite/setaf/Setaf.cpp:
        * cuts/unite/setaf/Setaf_Add_Command.cpp:
        * cuts/unite/setaf/Setaf_App.cpp:
        * cuts/unite/setaf/Setaf_Assignment_Command.cpp:
        * cuts/unite/setaf/Setaf_Code_Generator.h:
        * cuts/unite/setaf/Setaf_Code_Generator.inl:
        * cuts/unite/setaf/Setaf_Command.h:
        * cuts/unite/setaf/Setaf_Command.cpp:
        * cuts/unite/setaf/Setaf_Format.h:
        * cuts/unite/setaf/Setaf_Format.inl:
        * cuts/unite/setaf/Setaf_Format.cpp:
        * cuts/unite/setaf/Setaf_Increment_Command.cpp:
        * cuts/unite/setaf/Setaf_Integer_Variable.cpp:
        * cuts/unite/setaf/Setaf_Interpreter.h:
        * cuts/unite/setaf/Setaf_Interpreter.cpp:
        * cuts/unite/setaf/Setaf_Lang_Compiler.h:
        * cuts/unite/setaf/Setaf_Lang_Compiler.cpp:
        * cuts/unite/setaf/Setaf_Parser.h: