@@ -1,3 +1,11 @@
+Mon Feb 27 18:05:26 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>
+
+        * cuts/unite/setaf/Setaf_Add_Command.cpp:
+        * cuts/unite/setaf/Setaf_Assignment_Command.cpp:
+        * cuts/unite/setaf/Setaf_Interpreter.cpp:
+
+          Fixed memory leaks due to the creation of objects in the heap.
+
 Mon Feb 27 16:20:41 UTC 2012  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>
 
         * cuts/unite/setaf/Setaf_Parser.cpp:
